Revert "Fix: vercel deployment"
This reverts commit a304fb115303f09242e7a28cf6b578a19b3d7eb7.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:frontend": "node dist/frontend/server/server.mjs",
-    "build-dev": "ng build",
-    "vercel-build": "ng build && node dist/frontend/server/server.mjs"
+    "serve:ssr:frontend": "node dist/frontend/server/server.mjs"
   },
   "private": true,
   "dependencies": {
